Tell renderer which subframes have history items on back/forward.

This avoids making an IPC trip to the browser process for frames
that will not find a history item there.

BUG=649345, 639842
TEST=See bug for repro steps.
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2380943002
Cr-Commit-Position: refs/heads/master@{#421972}

Former-commit-id: c8ca51e469c96ab4a3e1b0cd9772687077b38984