content/common/navigation_params.h
@@ -7,6 +7,7 @@
 
 #include <stdint.h>
 
+#include <set>
 #include <string>
 
 #include "base/memory/ref_counted.h"
@@ -228,7 +229,7 @@ struct CONTENT_EXPORT RequestNavigationParams {
                           int nav_entry_id,
                           bool is_same_document_history_load,
                           bool is_history_navigation_in_new_child,
-                          bool has_subtree_history_items,
+                          std::set<std::string> subframe_unique_names,
                           bool has_committed_real_load,
                           bool intended_as_new_entry,
                           int pending_history_list_offset,
@@ -279,13 +280,13 @@ struct CONTENT_EXPORT RequestNavigationParams {
   // a URL from a session history item.  Defaults to false.
   bool is_history_navigation_in_new_child;
 
-  // If this is a history navigation, this indicates whether the browser process
-  // is aware of any subframe history items for the given frame.  If not, the
-  // renderer does not need to check with the browser if any subframes are
-  // created during the navigation.
-  // TODO(creis): Expand this to a data structure of unique names and
-  // corresponding PageStates in https://crbug.com/639842.
-  bool has_subtree_history_items;
+  // If this is a history navigation, this contains a set of frame unique names
+  // for immediate children of the frame being navigated for which there are
+  // history items.  The renderer process only needs to check with the browser
+  // process for newly created subframes that have these unique names.
+  // TODO(creis): Expand this to a data structure including corresponding
+  // same-process PageStates as well in https://crbug.com/639842.
+  std::set<std::string> subframe_unique_names;
 
   // Whether the frame being navigated has already committed a real page, which
   // affects how new navigations are classified in the renderer process.
